# RAG

./: HYDE.ipynb  pyproject.toml
Contextual Chunk Headers/: contextual_headers.ipynb  doc_processor.py  document_processor.py  evaluation.py  ipv4_fix.py  llm_interface.py  retrieval.py  vector_store.py
Contextual Chunk Headers/modules/: document_processor.py  embedding.py  main.py  retrieval.py
Contextual Compression/: contextualcompression.ipynb
Fusion RAG/: fusion.ipynb
HRAG/: HRAG_Implementation.ipynb  config.py  document_processor.py  embedding.py  llm_interface.ipynb  llm_interface.py  retrieval.py  vector_store.py
HYDE Implementation/: HYDE.ipynb  hyde.py  main.py
HYDE Implementation/Hyde Scores/docs/: hyde_scores_20250519225600.md  hyde_scores_20250519230414.md  hyde_scores_20250519230708.md
RAG_Evaluation/: evaluation.ipynb
RAPTOR/: RAPTOR.ipynb  document_processor.py  llm_interface.py
RAPTOR/knowledge_base/: declaration_of_independence_of_the_united_states.txt  olande.txt
Self-RAG/: self_rag.ipynb
Self-RAG/books/: olande.txt
Self-RAG/books/vector_store/: index.faiss  index.pkl
graph_rag/: config.py  document_processor.py  entity_extraction.py  graph_rag.py  knowledge_graph.py  main.ipynb  rag_chain.py  retrieval.py  vector_store.py
graph_rag/knowledge_base/: cleaned_finetuning_llms.txt  declaration_of_independence_of_the_united_states.txt  olande.txt
hierarchical-rag/: document_processor.py
multimodal RAG/: MultimodalRAG.ipynb
