[project]
name = "rag-techniques"
version = "0.1.0"
description = "Anything related to RAG Techniques I would've implemented"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langchain-core>=0.3.60",
    "langchain-openai>=0.3.17",
    "numpy>=2.2.6",
    "pinecone>=6.0.2"
]
